--- a/Front-end/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/Front-end/app/src/main/res/layout/fragment_leaderboard.xml
@@ -4,7 +4,7 @@
     android:id="@+id/statistic_swipe_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".mainMenuFragments.StatisticFragment">
+    tools:context=".MainMenuFragments.StatisticFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -26,7 +26,277 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
+            <TableLayout
+                android:id="@+id/statistics_table"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <TableRow>
+                    <TextView
+                        android:id="@+id/statistic_top"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_column="0"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="Col1"
+                        android:textSize="20sp" />
+                    <TextView
+                        android:id="@+id/statistic_topr"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_column="1"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="Col2"
+                        android:textSize="20sp" />
+                </TableRow>
+                <TableRow>
+                    <TextView
+                        android:id="@+id/statistic_entry0"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_column="0"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="entry"
+                        android:textSize="20sp" />
+                    <TextView
+                        android:id="@+id/statistic_entry0r"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_column="1"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="value"
+                        android:textSize="20sp" />
+                </TableRow>
+                <TableRow>
+                    <TextView
+                        android:id="@+id/statistic_entry1"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_column="0"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="entry"
+                        android:textSize="20sp" />
+                    <TextView
+                        android:id="@+id/statistic_entry1r"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_column="1"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="value"
+                        android:textSize="20sp" />
+                </TableRow>
+                <TableRow>
+                    <TextView
+                        android:id="@+id/statistic_entry2"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_column="0"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="entry"
+                        android:textSize="20sp" />
+                    <TextView
+                        android:id="@+id/statistic_entry2r"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_column="1"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="value"
+                        android:textSize="20sp" />
+                </TableRow>
+                <TableRow>
+                    <TextView
+                        android:id="@+id/statistic_entry3"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_column="0"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="entry"
+                        android:textSize="20sp" />
+                    <TextView
+                        android:id="@+id/statistic_entry3r"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_column="1"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="value"
+                        android:textSize="20sp" />
+                </TableRow>
+                <TableRow>
+                    <TextView
+                        android:id="@+id/statistic_entry4"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_column="0"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="entry"
+                        android:textSize="20sp" />
+                    <TextView
+                        android:id="@+id/statistic_entry4r"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_column="1"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="value"
+                        android:textSize="20sp" />
+                </TableRow>
+                <TableRow>
+                    <TextView
+                        android:id="@+id/statistic_entry5"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_column="0"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="entry"
+                        android:textSize="20sp" />
+                    <TextView
+                        android:id="@+id/statistic_entry5r"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_column="1"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="value"
+                        android:textSize="20sp" />
+                </TableRow>
+                <TableRow>
+                    <TextView
+                        android:id="@+id/statistic_entry6"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_column="0"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="entry"
+                        android:textSize="20sp" />
+                    <TextView
+                        android:id="@+id/statistic_entry6r"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_column="1"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="value"
+                        android:textSize="20sp" />
+                </TableRow>
+                <TableRow>
+                    <TextView
+                        android:id="@+id/statistic_entry7"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_column="0"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="entry"
+                        android:textSize="20sp" />
+                    <TextView
+                        android:id="@+id/statistic_entry7r"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_column="1"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="value"
+                        android:textSize="20sp" />
+                </TableRow>
+                <TableRow>
+                    <TextView
+                        android:id="@+id/statistic_entry8"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_column="0"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="entry"
+                        android:textSize="20sp" />
+                    <TextView
+                        android:id="@+id/statistic_entry8r"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_column="1"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="value"
+                        android:textSize="20sp" />
+                </TableRow>
+                <TableRow>
+                    <TextView
+                        android:id="@+id/statistic_entry9"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_column="0"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="entry"
+                        android:textSize="20sp" />
+                    <TextView
+                        android:id="@+id/statistic_entry9r"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_column="1"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="value"
+                        android:textSize="20sp" />
+                </TableRow>
+                <TableRow>
+                    <TextView
+                        android:id="@+id/statistic_entry10"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_column="0"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="entry"
+                        android:textSize="20sp" />
+                    <TextView
+                        android:id="@+id/statistic_entry10r"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_column="1"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="value"
+                        android:textSize="20sp" />
+                </TableRow>
 
+            </TableLayout>
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
